# ObsidianSyncWASM

./: .gitignore  .gitmodules  CLAUDE.md  ObsidianSyncWASM.code-workspace  README.md  SECURITY.md  esbuild.config.mjs  main.ts  manifest.json  package-lock.json  package.json  styles.css  tsconfig.json  versions.json  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: INTEGRATION-TESTING.md  TESTING-QUICK-REFERENCE.md
nodemon-configs/: nodemon-dev-ts.json  nodemon-dev-wasm.json
scripts/: README.md  detect-es-support.js  install-to-test-vaults.mjs  setup-test-vaults.sh  symlink-plugin.mjs
test/: README.md  setup.ts
test-vaults/: README.md
test-vaults/fixtures/: conflict-scenario.md  note-with-links.md  sample-note.md
test-vaults/vault-a/: HOT-RELOAD-SETUP.md
test-vaults/vault-a/.obsidian/: community-plugins.json  workspace.json
test/mocks/: obsidian.ts
test/unit/: plugin.test.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
