[package]
name = "obsidian-sync-wasm"
version = "0.1.0"
authors = ["Taylor Dickson <taylor@example.com>"]
edition = "2021"
description = "An optimized sync plugin for Obsidian written in Rust"
license = "MIT"
repository = "https://github.com/taylordickson/obsidian-sync-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
development = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Optimize for small code size
opt-level = "s"
lto = true
